--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,16 +1,16 @@
-name: [Snap Name] # you probably want to 'snapcraft register <name>'
+name: skylands-legends # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
 version: '1.0.0' # just for humans, typically '1.2+git' or '1.3.2'
-title: [Game Name]
-summary: [Short Summary]
-description: [Description]
+title: Skylands Legends
+summary: Conquer mystical floating worlds.
+description: Fight rival clans, capture floating territories, and build your legend in the clouds.
 
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
 apps:
-  [Snap Name]:
-    command: bin/[Snap Name]-bin
+  skylands-legends:
+    command: bin/skylands-legends-bin
     extensions: [gnome]
     plugs:
       - network
@@ -22,8 +22,8 @@ layout:
     bind: $SNAP/gnome-platform/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/webkit2gtk-4.0
 
 parts:
-  [Snap Name]:
+  skylands-legends:
     plugin: dump
     source: .
     organize:
-      [Snap Name]-bin: bin/
+      skylands-legends-bin: bin/
